Fix: z-index 속성 값 수정

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -22,7 +22,7 @@
   &.hair,
   &.perfume,
   &.home {
-    z-index: 20;
+    z-index: 40;
     opacity: 1;
     visibility: unset;
   }
@@ -75,7 +75,7 @@
     padding: 0 40px;
     background-color: $background;
     border-bottom: 1px solid $border;
-    z-index: 20;
+    z-index: 50;
     transition: all 250ms ease-in;
 
     .gnbItemTitle {
